fix overlay, herosection mobile, and added speechbubble

--- a/src/app/landing-page/contact/contact.component.scss
+++ b/src/app/landing-page/contact/contact.component.scss
@@ -61,6 +61,7 @@
                 flex-direction: column;
                 gap: 32px;
                 margin-bottom: 10px;
+                position: relative;
                 .field {
                     display: flex;
                     justify-content: space-between;
@@ -124,11 +125,16 @@
                         justify-content: center;
                     }
                     >.thanks-container {
-                        display: flex;
-                        justify-content: center;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        padding: 20px 40px;
+                        text-align: center;
+                        background-color: rgba(0, 0, 0, 0.5);
+                        border-radius: 10px;
                         >.thanks-for-message {
-                            display: none;
-                            @include defaultFont($font-weight: 400, $fontsize: 14px, $color: #70E61C);
+                            @include defaultFont($font-weight: 400, $fontsize: 23px, $color: #70E61C);
                         }
                     }
                 }
